# uuagc

./: .gitignore  .travis.yml  stack.yaml
Text.ParserCombinators.UU/: README  uu-parsinglib.cabal
Text.ParserCombinators.UU/Text/ParserCombinators/UU/: BasicInstances.hs  Core.hs  CoreNew.hs  Derived.hs  Examples.hs  Parsing.hs  Versions
scripts/trunk/: mk-snapshots.sh  mk-src.sh
tiger/: INSTALL  Makefile.in  configure.ac  tiger.cabal
tiger/src/: Tiger.hs  TigerAS.ag  TigerScanner.x  TigerSem.ag  TigerTypes.hs
tiger/testcases/: queens.tig  test27.tig
tigerdoaitse/: Setup.hs  configure.ac  tiger.cabal  uuagc_options
tigerdoaitse/src/: Tiger.hs  TigerError.ag  TigerScanner.x  TigerSem.ag  TigerTypes.hs
tigerdoaitse/testcases/: test.tig  test0.tig
uuagc/branches/candidate/: Makefile.in  configure.in  uuagc.cabal.in
uuagc/branches/candidate/doc/: uuagc093release.tex
uuagc/branches/candidate/src/: Ag.hs  GrammarInfo.hs  Parser.hs  SequentialComputation.lhs  SequentialTypes.hs
uuagc/branches/candidate/src-ag/: AbstractSyntax.ag  Code.ag  CodeSyntax.ag  DefaultRules.ag  ErrorMessages.ag  ExpressionAttr.ag  GenerateCode.ag  GenerateCode.lag  HsToken.ag  InterfacesRules.lag  Order.ag  Order.lag  PrintCode.ag  PrintErrorMessages.ag  SemHsTokens.ag  Transform.ag
uuagc/branches/candidate/test/: TestErr-UndefNont2.ag
uuagc/branches/easier/: Makefile.in  uuagc.cabal.in
uuagc/branches/easier/doc/: uuagc093release.tex
uuagc/branches/easier/src/: Ag.hs  CommonTypes.hs  Options.hs
uuagc/branches/easier/src-ag/: Code.ag  Comments.ag  ConcreteSyntax.ag  ErrorMessages.ag  Expression.ag  PrintCode.ag  PrintErrorMessages.ag  Transform.ag
uuagc/branches/easier/test/: Test.ag  Test2.ag  Test3.ag  Test4.ag  Test5.ag
uuagc/branches/fixpoint/: LICENSE  README  Setup.hs  UUAGCTests.hs  VERSION  uuagc.cabal.in
uuagc/branches/fixpoint/src/: AbstractSyntax.ag  ConcreteSyntax.ag  DefaultRules.ag  Desugar.ag  ErrorMessages.ag  FixPointHelper.hs  Order.ag  Parser.hs  PrintErrorMessages.ag  Scanner.hs  TokenDef.hs  Transform.ag
uuagc/branches/fixpoint/test/: TestOKVisit1.ag  TestOkFP.ag  TestOkFP.hs  TestSideEffect.hs
uuagc/branches/higher-order/src/: CommonTypes.hs  GrammarInfo.hs  Scanner.hs  SequentialComputation.lhs  SequentialTypes.hs
uuagc/branches/higher-order/src-ag/: AbstractSyntax.ag  CodeSyntax.ag  CodeSyntaxDump.ag  DefaultRules.ag  ErrorMessages.ag  GenerateCode.ag  InterfacesRules.lag  Order.ag  PrintErrorMessages.ag  Transform.ag
uuagc/branches/higher-order/test/: TestErrExprPPFirstOrder.ag  TestOKVisitInst1.ag
uuagc/branches/juan/: Makefile.in  Setup.hs  VERSION  uuagc.cabal.in  uuagc_options
uuagc/branches/juan/cabal-plugin/: LICENSE
uuagc/branches/juan/src/: AbstractSyntax.ag  Ag.hs  CommonTypes.hs  ConcreteSyntax.ag  Dep.ag  Desugar.ag  FixedPointHelper.hs  FixedPointTransform.ag  GrammarInfo.hs  HsTokenWriter.hs  Order.ag  Parser.hs  Scanner.hs  SemFPCSegments.ag  SequentialTypes.hs  Transform.ag
uuagc/branches/juan/src-ag/: AbstractSyntax.ag  ConcreteSyntax.ag  ErrorMessages.ag  PrintErrorMessages.ag  TfmToVisage.ag  Transform.ag
uuagc/branches/juan/test/: Makefile
uuagc/branches/pragma/src/: Parser.hs
uuagc/branches/sequential/: Makefile.in  configure.in
uuagc/branches/sequential/src-ag/: AbstractSyntax.ag  Code.ag  CodeSyntax.ag  (+13 more)
uuagc/branches/uuagc2uuoagc/: update-src-generated.sh  uuagc.cabal  uuagc_options
uuagc/trunk/: Setup.hs  generate-sdist.sh  stack.yaml  todo.txt  update-src-generated.sh  uuagc.cabal  uuagc_options
uuagc/trunk/cabal-plugin/: uuagc-cabal.cabal
uuagc/trunk/diagrams/: Example.hs  LICENSE  uuagc-diagrams.cabal
uuagc/trunk/regress/: Makefile
uuagc/trunk/src/: ATermAbstractSyntax.hs  ATermWrite.hs  Ag.hs  JSON.hs  KennedyWarren.hs  Knuth1.hs  MirageSyntax.hs  PPUtil.hs  Parser.hs  Pretty.hs  Scanner.hs
uuagc/trunk/src-ag/: AG2AspectAG.ag  AbstractSyntaxDump.ag  Code.ag  CodeSyntaxDump.ag  DefaultRules.ag  DistChildAttr.ag  ExecutionPlan.ag  ExecutionPlan2Caml.ag  ExecutionPlan2Clean.ag  ExecutionPlan2Hs.ag  ExecutionPlanCommon.ag  ExecutionPlanPre.ag  GenerateCode.ag  InterfacesRules.lag  KWOrder.ag  Patterns.ag  PrintCleanCode.ag  PrintCode.ag  PrintErrorMessages.ag  PrintOcamlCode.ag  TfmToMirage.ag  TfmToVisage.ag  Transform.ag  Visage.ag
uuagc/trunk/src-generated/: AG2AspectAG.hs  AbstractSyntax.hs  AbstractSyntaxDump.hs  Code.hs  CodeSyntax.hs  CodeSyntaxDump.hs  ConcreteSyntax.hs  DeclBlocks.hs  DefaultRules.hs  Desugar.hs  ErrorMessages.hs  ExecutionPlan.hs  ExecutionPlan2Caml.hs  ExecutionPlan2Clean.hs  ExecutionPlan2Hs.hs  Expression.hs  GenerateCode.hs  HsToken.hs  Interfaces.hs  InterfacesRules.hs  KWOrder.hs  Macro.hs  Order.hs  Patterns.hs  PrintCleanCode.hs  PrintCode.hs  PrintErrorMessages.hs  PrintOcamlCode.hs  PrintVisitCode.hs  ResolveLocals.hs  SemHsTokens.hs  TfmToMirage.hs  TfmToVisage.hs  Transform.hs  Visage.hs  VisagePatterns.hs  VisageSyntax.hs
uuagc/trunk/src-options/: Options.hs
uuagc/trunk/test/: KWnotLOAG.ag  TestErr-CircLocal.ag  TestErr-CyclicSet.ag  TestErr-DupChild.ag  TestErr-DupChild2.ag  TestErr-DupRule.ag  TestErr-DupSet.ag  TestErr-DupSet2.ag  TestErr-DupSyn2.ag  TestErr-MissingRule.ag  TestErr-SuperflRule.ag  TestErr-UndefAlt.ag  TestErr-UndefAttr.ag  TestErr-UndefChild.ag  TestErr-UndefChild2.ag  TestErr-UndefLocal.ag  TestErr-UndefNont.ag  TestErr-UndefNont2.ag  TestErr-UndefNont3.ag  TestErrBareChild.ag  TestErrDupSig.ag  TestErrOK-DupAlt.ag  TestErrOK-DupAlt2.ag  TestErrOK-DupSet3.ag  TestErrOK-DupSyn3.ag  TestErrOK-PolyData.ag  TestErrOK-PolyData2.ag  TestErrOK-PolySem.ag  TestErrOK-PolySem2.ag  TestErrOK-PolySem3.ag  TestErrOK-PolySem4.ag  TestErrOK-ShareAlt.ag  TestOK-DupAlt3.ag  TestOK-Literate.lag  TestOK-NestedTupel.ag  TestOKBareTrivChild.ag  TestOKSelfChild.ag  TestOKVisit1.ag  TestOKVisit2.ag  TestOKVisit3.ag  (+11 more)
uust/trunk/: Makefile.in  configure.in  uust.cabal  uust.cabal.in
(+80 files in other folders)
