cabal-version: >=1.2
build-type: Simple
name: tiger
version: 1.0
license: GPL
maintainer: Doaitse Swierstra
homepage: http://www.cs.uu.nl/wiki/HUT/WebHome
description: Tiger compiler
synopsis: Tiger Compiler of Universiteit Utrecht
category: Compiler
stability: Experimental
copyright: Universiteit Utrecht

executable tiger
  build-depends: base >= 3
  build-depends: haskell98, array
  build-depends: uulib
  main-is: Tiger.hs
  ghc-options: -fglasgow-exts
  hs-source-dirs: src, derived

